[project]
name = "audio-test-fixtures"
version = "0.1.0"
description = "Deterministic audio fixtures and validation tools for automated audio pipeline testing"
authors = [{ name = "Jesús Leganés-Combarro 'piranna'", email = "piranna@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
	"numpy>=2.4.1",
]

[project.scripts]
generate-vocal-scale = "audio_test_fixtures.generate_vocal_scale:main"
validate-audio = "audio_test_fixtures.validate_audio_transmission:main"

[tool.poetry]
packages = [{ include = "audio_test_fixtures", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
